update and clean up configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,25 +14,67 @@ set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'sainnhe/tmux-fzf'
 
-set -g status-bg 'black'
-set -g status-fg 'white'
+# Formats & Styles {{{
+# Status line {{{
+set -g status-keys 'vi'
 set -g status-left-length 60
-set -g status-left '#[fg=blue][#(whoami)#[fg=white]@#[fg=green]#h #[fg=yellow]#S:#I.#P#[fg=blue]]'
 set -g status-right-length 60
-set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 set -g status-justify 'centre'
+set -g status-left '#{?pane_in_mode,#[fg=black]#[bg=#E0CA53] #{?selection_present,#{?rectangle_toggle,B,S},C} #[default], N }| #(tmux list-sessions | wc -l) | #S '
+set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M | #(whoami) | #h '
+set -g status-style 'fg=default,bg=black'
+set -g status-left-style 'default'
+set -g status-right-style 'default'
+# }}}
+
+# Windows {{{
 set -g monitor-activity on
 set -g visual-activity off
-set -wg automatic-rename on
+set -g automatic-rename on
 set -g renumber-windows on
-set -g mouse on
-set -g mode-keys vi
-set -g prefix C-q
+set -g window-status-separator ' '
+set -g automatic-rename-format '#{?pane_in_mode,[tmux],#{pane_current_command}}#{?pane_dead,[dead],}'
+set -g window-status-format '#I:#W#{?window_flags,#{window_flags},}'
+set -g window-status-current-format '[#I:#W#{?window_flags,#{window_flags},}]'
+set -g window-status-style 'default'
+set -g window-status-current-style 'fg=#FF9400,bg=default'
+set -g window-status-activity-style 'reverse'
+set -g window-status-bell-style 'reverse'
+set -g window-status-last-style 'default'
+set -g window-active-style 'default'
+set -g window-style 'default'
+# }}}
 
+# Panes {{{
+set -g pane-border-status 'off'
+set -g pane-border-format '#{?pane_active,#[reverse],}#{pane_index}#[default] "#{pane_title}"'
+set -g pane-active-border-style 'fg=blue,bg=default'
+set -g pane-border-style 'default'
+set -g display-panes-active-colour 'red'
+set -g display-panes-colour 'blue'
+# }}}
+
+# misc {{{
+set -g set-titles 'on'
+set -g set-titles-string '#S:#I:#W - "#T" #{session_alerts}'
+set -g message-command-style 'fg=yellow,bg=default'
+set -g message-style 'fg=default,bg=default'
+set -g mode-keys 'vi'
+set -g mode-style 'fg=black,bg=#E0CA53'
+set -g clock-mode-colour 'blue'
+set -g clock-mode-style '24'
+# }}}
+# }}}
+
+# Key bindings {{{
+set -g mouse off
+set -g prefix2 C-q
 bind C-q send-keys C-q
+bind C-b send-keys C-b
 bind Tab last-pane
 bind `   copy-mode
-bind e   new-window -n "~/.tmux.conf" "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
+bind r   run 'tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced!"'
+bind e   new-window -n "~/.tmux.conf" "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced!\"'"
 bind -T copy-mode-vi Escape send-keys -X cancel
 bind -T copy-mode-vi q      send-keys -X clear-selection
 bind -T copy-mode-vi v      send-keys -X begin-selection
@@ -40,11 +82,16 @@ bind -T copy-mode-vi C-v    send-keys -X rectangle-toggle
 bind -T copy-mode-vi y      send-keys -X copy-selection-and-cancel
 bind -T copy-mode-vi H      send-keys -X start-of-line
 bind -T copy-mode-vi L      send-keys -X end-of-line
+# }}}
 
+# Plugin options/settings {{{
 set -g @tmux-fzf-launch-key 'M-f'
+set -g @fingers-key 'F'
+# set -g @fingers-pettern-0 ''
 # set -g @prefix_highlight_fg 'white'
 # set -g @prefix_highlight_bg 'blue'
 # set -g @continuum-restore 'on'
+# }}}
 
 # Automatically install TPM and plugins
 # if "test ! -d ~/.tmux/plugins/tpm" \
