--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,9 +68,8 @@ set -g clock-mode-style '24'
 
 # Key bindings {{{
 set -g mouse off
-set -g prefix2 C-q
+set -g prefix C-q
 bind C-q send-keys C-q
-bind C-b send-keys C-b
 bind Tab last-pane
 bind `   copy-mode
 bind r   run 'tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced!"'
