--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,15 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'ishbguy/tmux-alias'
+
+# Aliases
+set -g @alias help=list-commands
+set -g @alias echo=display-message
+set -g @alias print=display-message
+set -g @alias nw=new-window
+set -g @alias ns=new-session
+set -g @alias tree=choose-tree
 
 # Formats & Styles {{{
 # Status line {{{
@@ -43,6 +52,8 @@ set -g window-status-bell-style 'reverse'
 set -g window-status-last-style 'default'
 set -g window-active-style 'default'
 set -g window-style 'default'
+set -g base-index 1
+set -g pane-base-index 1
 # }}}
 
 # Panes {{{
