add new aliases and tpm installation test

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,9 +19,11 @@ set -g @plugin 'ishbguy/tmux-alias'
 set -g @alias help=list-commands
 set -g @alias echo=display-message
 set -g @alias print=display-message
+set -g @alias kp=kill-pane
 set -g @alias nw=new-window
 set -g @alias ns=new-session
 set -g @alias tree=choose-tree
+set -g @alias go=choose-tree
 
 # Formats & Styles {{{
 # Status line {{{
@@ -104,8 +106,8 @@ set -g @fingers-key 'F'
 # }}}
 
 # Automatically install TPM and plugins
-# if "test ! -d ~/.tmux/plugins/tpm" \
-#          "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+if "test ! -d ~/.tmux/plugins/tpm" \
+         "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
