add new pane controlled aliases

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,8 @@ set -g @alias help=list-commands
 set -g @alias echo=display-message
 set -g @alias print=display-message
 set -g @alias kp=kill-pane
+set -g @alias np=split-window
+set -g @alias npv='split-window -h'
 set -g @alias nw=new-window
 set -g @alias ns=new-session
 set -g @alias tree=choose-tree
