add lock.sh config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # set -g @plugin 'Morantron/tmux-fingers'
 # set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'ishbguy/tmux-alias'
+set -g @plugin 'ishbguy/lock.sh'
 
 # Aliases
 set -g @alias help=list-commands
@@ -99,12 +100,15 @@ bind -T copy-mode-vi L      send-keys -X end-of-line
 # }}}
 
 # Plugin options/settings {{{
-set -g @tmux-fzf-launch-key 'M-f'
-set -g @fingers-key 'F'
+# set -g @tmux-fzf-launch-key 'M-f'
+# set -g @fingers-key 'F'
 # set -g @fingers-pettern-0 ''
 # set -g @prefix_highlight_fg 'white'
 # set -g @prefix_highlight_bg 'blue'
 # set -g @continuum-restore 'on'
+set -g @lock-after-time '60'
+set -g @lock-command '-lAS 60'
+set -g @lock-login-time '60'
 # }}}
 
 # Automatically install TPM and plugins
